<resources>
    <string name="app_name">TBCHomeWorkSix</string>
    <string name="name">Name:</string>
    <string name="surname">Surname:</string>
    <string name="age">Age:</string>
    <string name="email">Email:</string>
    <string name="active_users">Active Users:</string>
    <string name="removed_users">Removed Users:</string>
    <string name="add_user">Add User</string>
    <string name="remove_user">Remove User</string>
    <string name="update_user">Update User</string>
    <string name="update_name">Update Name:</string>
    <string name="update_surname">update Surname:</string>
    <string name="update_age">Update Age:</string>

    <string name="not_valid_info">Please enter valid information.</string>
    <string name="user_not_exists">User does not exits.</string>
    <string name="user_added">User added successfully.</string>
    <string name="user_delete">User deleted successfully.</string>
    <string name="email_already_exists">Email already exists.</string>

    <string name="user_updated">User updated successfully</string>
    <string name="user_not_found">User not found</string>
</resources>